[tool.poetry]
name = "sandbox-dask"
version = "0.0.1"
description = "Machine Learning with dask lab code & examples"
authors = ["Jean Metz"]

[tool.poetry.dependencies]
python = "^3.10.2"
numpy = "^1.26.4"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
dask = {extras = ["complete"], version = "^2024.2.0"}
pyarrow = "^15.0.0"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
environs = "^10.3.0"
typer = "^0.9.0"
scipy = "^1.12.0"
statsmodels = "^0.14.1"
pillow = "^10.2.0"
scikit-image = "^0.22.0"
h5py = "^3.10.0"
importlib-resources = "^6.1.1"
graphviz = "^0.20.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
ipdb = "^0.13.13"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
pytest-sugar = "^1.0.0"
ruff = "^0.2.2"
pipdeptree = "^2.14.0"
prettytable = "^3.10.0"
pip-licenses = "^4.3.4"


[tool.poetry.group.notebook.dependencies]
tqdm = "^4.66.2"
ipykernel = "^6.29.2"
perfplot = "^0.10.2"
memory-profiler = "^0.61.0"
line-profiler = "^4.1.2"
psutil = "^5.9.8"
jupyterlab = "^4.1.2"


[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py38"
extend-include = ["*.ipynb"]


[tool.ruff.lint]
select = [# Enable
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = 92



[tool.pytest.ini_options]
#addopts = "--pdbcls=IPython.terminal.debugger:TerminalPdb --cov=src --cov-fail-under 80"

[tool.coverage.report]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]
show_missing = true

[tool.coverage.run]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry_core>=1.0.0"]
